Implement comprehensive SEO strategy with sitemap and metadata
Introduce a full-stack SEO solution including a new React component for
metadata management, automated sitemap generation, and improved bot
handling.

Frontend Changes:
- Add `SEO.js` component using `react-helmet-async` for managing title,
  meta description, OpenGraph tags, and JSON-LD structured data.
- Integrate `SEO` component into `DiveDetail`, `DiveSiteDetail`,
  `DivingCenterDetail`, `RouteDetail`, and `TripDetail` pages.
- Remove legacy `usePageTitle` hook from updated pages.
- Update `robots.txt` to reference `sitemap.xml` and improve bot
  directives.
- Update `index.html` with a better default description.

Backend & Infrastructure:
- Rename `generate_llm_content.py` to `generate_static_content.py` and
  extend it to generate `sitemap.xml`.
- Update R2 upload logic to support XML and Markdown content types.
- Configure Nginx to proxy `sitemap.xml` requests to the backend/R2.
- Update Cloudflare Worker to serve `sitemap.xml` from R2.

Documentation:
- Add `docs/development/work/SEO_PROPOSALS.md` outlining the implemented
  strategy.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#2563eb" />
     <meta
       name="description"
-      content="Divemap - Discover, rate and review dive sites and diving centers."
+      content="Divemap - The ultimate scuba diving platform. Discover and rate dive sites, log your dives, plan trips, share underwater routes, and connect with the global diving community."
     />
     <link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" />
     <title>Divemap</title>
