Implement SEO proposals and improve UI/UX
- **UGC Link Management**:
    - Update `textHelpers.js` to support `isUGC` option in `linkifyUrls` and
      `renderTextWithLinks`, adding `rel="nofollow ugc"` to generated links.
    - Apply `isUGC: true` to user comments in `DiveSiteDetail.js` and
      `DivingCenterDetail.js`.
    - Add `rel="nofollow"` to user social links in `UserProfile.js`.

- **Visual Breadcrumbs**:
    - Create new `Breadcrumbs` component for improved navigation and SEO.
    - Integrate `Breadcrumbs` into `DiveSiteDetail`, `DivingCenterDetail`,
      `DiveDetail`, and `TripDetail` pages.
    - **Enhancement**: Breadcrumbs now include dynamic filter links for
      Country and Region/City.
    - **Fix**: Remove duplicate hardcoded breadcrumbs from `TripHeader.js`.

- **Custom 404 Page**:
    - Create `NotFound.js` page with helpful links and search suggestions.
    - Add wildcard route (`*`) in `App.js` to serve the 404 page.

- **UI Improvements**:
    - Reorder Dive Route card header in `DiveRoutes.js` to prioritize Route
      Name over Dive Site Name for better scanability.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,18 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Divemap - Discover Amazing Dive Sites</h1>
+      <p>The ultimate scuba diving platform. Discover and rate dive sites, log your dives, plan trips, share underwater routes, and connect with the global diving community.</p>
+      <nav>
+        <a href="/dive-sites">Dive Sites</a>
+        <a href="/diving-centers">Diving Centers</a>
+        <a href="/dives">Public Dives</a>
+        <a href="/dive-trips">Dive Trips</a>
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
+      </nav>
+    </div>
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
