Fix backend cold start timeouts on login and register
- Increase Nginx proxy timeouts from 2s to 30s in prod.conf to allow
  sufficient time for cold-starting backend machines on Fly.io.
- Implement proactive backend readiness checks on Login and Register
  pages by pinging /health?frontend=true on component mount.
- Improve UX by disabling sign-in and registration buttons and
  providing visual feedback ("Connecting to server...") until the
  backend is reachable.
- Update frontend API service to enable automatic retries for auth
  endpoints (login, register, google-login) on retryable errors (504,
  5xx), ensuring better resilience against transient failures.
- Fix PWA configuration to exclude robots.txt, sitemap.xml, and
  Markdown files from navigation fallback, ensuring they are served
  correctly from the backend.
- Update index.html description and title for improved SEO.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#2563eb" />
     <meta
       name="description"
-      content="Divemap - The ultimate scuba diving platform. Discover and rate dive sites, log your dives, plan trips, share underwater routes, and connect with the global diving community."
+      content="Divemap - The ultimate scuba platform. Discover dive sites, log dives, plan trips, share routes, and connect with the global diving community."
     />
     <link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" />
-    <title>Divemap</title>
+    <title>Divemap - Discover and Rate Scuba Dive Sites Worldwide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
