--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="/favicons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2563eb" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Divemap" />
     <meta name="description" content="The ultimate scuba diving platform. Discover and rate dive sites, log your dives, plan trips, share underwater routes, and connect with the global diving community." data-rh="true" />
     <link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" />
     <title>Divemap - Discover and Rate Scuba Dive Sites Worldwide</title>
@@ -98,5 +102,13 @@
       </div>
     </div>
     <script type="module" src="/src/index.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js', { scope: '/' })
+            .catch(err => console.error('SW registration failed:', err));
+        });
+      }
+    </script>
   </body>
 </html>
